<resources>
    <string name="app_name">Individualka</string>
    <string name="title4">Hi Azim, Welcome to Silencio</string>
    <string name="text4">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="title5">What Brings you to Silent Moon?</string>
    <string name="focuus5">choose a topic to focuse on:</string>
    <string name="text6">Any time you can choose, but We recommend first thing in the morning.</string>
    <string name="medy">What time would you like to meditate?</string>
    <string name="best">Everyday is best, but we recommend picking at least five.</string>
    <string name="days">Which day would you like to meditate?</string>
    <string name="gday">We Wish you have a good day</string>
    <string name="gm">Good morning, Azim</string>
    <string name="silencio">SILENCIO</string>
    <string name="logo">logo</string>
    <string name="illustration">illustration</string>
    <string name="title">We are what we do</string>
    <string name="textone">Thousand of people are usign silencio for small meditations</string>
    <string name="button">button</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="log_in">LOG IN</string>
    <string name="todo">TODO</string>
    <string name="or_log_in_with_email">OR LOG IN WITH EMAIL</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">email</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_your_account">Create your account!</string>
    <string name="start">start</string>
    <string name="no_thanks">no thanks</string>
    <string name="azim">Azim</string>
    <string name="meditate">Meditate</string>
    <string name="home">Home</string>
    <string name="ease">Ease the mind into a restful night’s sleep with these deep, amblent tones.</string>
    <string name="course">COURSE</string>
    <string name="happy_morning">Happy Morning</string>
    <string name="female_voice">Female Voice</string>
    <string name="male_voice">Male Voice</string>
    <string name="narrating">Pick a Narrator</string>
    <string name="acrobatics">We can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
    <string name="focus_attention">Focus Attention</string>
    <string name="calmmmmm">7 DAYS OF CALM</string>
    <string name="email2">Email</string>
    <string name="password">Password</string>
    <string name="_24_34343_favourites">24.34343 Favourites</string>
    <string name="min">10min</string>
    <string name="all">All</string>
    <string name="anxious">Anxious</string>
    <string name="kids">Kids</string>
    <string name="signup">Sign Up</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="somosing_auca_kg">somosing@auca.kg</string>
    <string name="close">close</string>
    <string name="galka">galka</string>
    <string name="get_started">Get Started</string>
    <string name="su">SU</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="th">TH</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="SAVE">SAVE</string>
    <string name="cabagebuton">cabagebuton</string>
    <string name="basics">BASICS</string>
    <string name="fivemin">3–10min</string>
    <string name="rexla">RELAXATION</string>
    <string name="music">Music</string>
    <string name="daily_thoughts">Daily Thoughts</string>
    <string name="medita">MEDITATION</string>
    <string name="_3_10min">• 3–10min</string>
    <string name="rec">Recommended for you</string>
    <string name="focus">Focus</string>
    <string name="meditation">Meditation</string>
    <string name="_5_min">5 min</string>
    <string name="bdad">Body Scan</string>
    <string name="calm">Daily Calm</string>
    <string name="dec_12">DEC 12</string>
    <string name="my">My</string>
    <string name="relea">Anxiety Release</string>
    <string name="play">play</string>
    <string name="playtime">01:45</string>
    <string name="playtimend">42:00</string>
    <string name="_213213_listened">213213 listened</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="improve_performance">Improve Performance</string>
    <string name="increse_happiness">Increse HAppiness</string>
    <string name="ansa">Reduce Anxiety</string>
    <string name="personal_growth">PErsonal Growth</string>
    <string name="better_sleep">Better Sleep</string>
</resources>