<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eight"
    android:background="@drawable/bg8"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/Strelka"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/strelka2"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/Likes"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="194dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/Strelka"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/like"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/Downloads"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/Likes"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/downloads"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/Restful"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswaldlight"
        android:text="@string/ease"
        android:textColor="@color/light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Course" />

    <TextView
        android:id="@+id/HappyMorning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="211dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/happy_morning"
        android:textColor="@color/strong"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Strelka" />

    <TextView
        android:id="@+id/Course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/course"
        android:textColor="@color/light"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HappyMorning" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="18dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/serdechko"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Restful"
        android:contentDescription="@string/todo" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="22dp"
        android:layout_height="18dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/naushniki"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/Restful" />

    <TextView
        android:id="@+id/listend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/oswaldlight"
        android:text="@string/_213213_listened"
        android:textColor="@color/light"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/Restful" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/oswaldlight"
        android:text="@string/_24_34343_favourites"
        android:textColor="@color/light"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Restful" />

    <TextView
        android:id="@+id/Narrator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/narrating"
        android:textColor="@color/strong"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="555dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/MaleVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/male_voice"
        android:textColor="@color/purt"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Narrator" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/female_voice"
        android:textColor="@color/light"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/MaleVoice"
        app:layout_constraintTop_toBottomOf="@+id/Narrator" />


    <ImageView
        android:id="@+id/playpurle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/play_purle"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MaleVoice" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/focus_attention"
        android:textColor="@color/strong"
        app:layout_constraintStart_toEndOf="@+id/playpurle"
        app:layout_constraintTop_toBottomOf="@+id/MaleVoice" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/min"
        android:textColor="@color/light"
        app:layout_constraintStart_toStartOf="@+id/playpurle"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <ImageView
        android:id="@+id/playgret"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/play_grey"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playpurle" />

    <TextView
        android:id="@+id/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/bdad"
        android:textColor="@color/strong"
        app:layout_constraintStart_toEndOf="@+id/playgret"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/_5_min"
        android:textColor="@color/light"
        app:layout_constraintStart_toEndOf="@+id/playgret"
        app:layout_constraintTop_toBottomOf="@+id/Body" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>