<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Six"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/Timewhat"
        android:layout_width="379dp"
        android:layout_height="60dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/medy"
        android:textColor="@color/strong"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ANyTime"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/oswaldlight"
        android:text="@string/text6"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timewhat" />

    <ImageView
        android:id="@+id/timeTable"
        android:layout_width="399dp"
        android:layout_height="212dp"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ANyTime"
        app:srcCompat="@drawable/time"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/week"
        android:layout_width="374dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/days"
        android:textColor="@color/strong"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Best" />

    <TextView
        android:id="@+id/Best"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/oswaldlight"
        android:text="@string/best"
        android:textColor="@color/light"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTable" />


    <ImageButton
        android:id="@+id/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week"
        android:contentDescription="@string/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/su"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sunday"
        app:layout_constraintEnd_toEndOf="@+id/sunday"
        app:layout_constraintStart_toStartOf="@+id/sunday"
        app:layout_constraintTop_toTopOf="@+id/sunday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton1"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toEndOf="@+id/sunday"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/m"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/monday"
        app:layout_constraintEnd_toEndOf="@+id/monday"
        app:layout_constraintStart_toStartOf="@+id/monday"
        app:layout_constraintTop_toTopOf="@+id/monday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton1"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toEndOf="@+id/monday"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/t"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tuesday"
        app:layout_constraintEnd_toEndOf="@+id/tuesday"
        app:layout_constraintStart_toStartOf="@+id/tuesday"
        app:layout_constraintTop_toTopOf="@+id/tuesday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton1"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/tuesday"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/w"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/wednesday"
        app:layout_constraintEnd_toEndOf="@+id/wednesday"
        app:layout_constraintStart_toStartOf="@+id/wednesday"
        app:layout_constraintTop_toTopOf="@+id/wednesday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton2"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toEndOf="@+id/wednesday"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/th"
        android:textColor="@color/purlish"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/thursday"
        app:layout_constraintEnd_toEndOf="@+id/thursday"
        app:layout_constraintStart_toStartOf="@+id/thursday"
        app:layout_constraintTop_toTopOf="@+id/thursday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton2"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/f"
        android:textColor="@color/purlish"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/friday"
        app:layout_constraintEnd_toEndOf="@+id/friday"
        app:layout_constraintStart_toStartOf="@+id/friday"
        app:layout_constraintTop_toTopOf="@+id/friday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/circlebutton1"
        android:contentDescription="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/friday"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/s"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/saturday"
        app:layout_constraintEnd_toEndOf="@+id/saturday"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/saturday"
        app:layout_constraintTop_toTopOf="@+id/saturday"
        tools:ignore="SmallSp" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="374dp"
        android:layout_height="63dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/buttonshape"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/SAVE"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/save"
        app:layout_constraintEnd_toEndOf="@+id/save"
        app:layout_constraintStart_toStartOf="@+id/save"
        app:layout_constraintTop_toTopOf="@+id/save" />

    <TextView
        android:id="@+id/nothanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswaldmedium"
        android:text="@string/no_thanks"
        android:textColor="@color/strong"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save" />


</androidx.constraintlayout.widget.ConstraintLayout>